// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot mfaCredentials default 1`] = `
<div>
  <div
    class="sc-Axmtr jBZtfl"
  >
    <div>
      <div
        class="sc-fzoyAV fGuloU"
      >
        <div>
          <div
            class="sc-AxirZ sc-AxiKw fAiBCP"
          >
            mfa.email.explain
          </div>
          <form
            class="sc-fzqBZW hrtIKw"
            novalidate=""
          >
            <button
              class="sc-fzokOt dTqsia"
              data-testid="submit"
              type="submit"
            >
              mfa.register.email
            </button>
          </form>
        </div>
        <div
          class="sc-AxhUy ihriO"
        >
          <span />
        </div>
        <div>
          <div
            class="sc-AxirZ sc-AxiKw fAiBCP"
          >
            mfa.phoneNumber.explain
          </div>
          <form
            class="sc-fzqBZW hrtIKw"
            novalidate=""
          >
            <div
              class="sc-fzoLsD mtFrt"
            >
              <label
                class="sc-fzozJi dEjaXT"
                for="phone_number"
              >
                phoneNumber
              </label>
              <div
                class="sc-fzqNJr eQTqfM"
              >
                <input
                  autocomplete="tel"
                  class="sc-fzpans cUAEYx"
                  data-testid="phone_number"
                  id="phone_number"
                  name="phone_number"
                  placeholder="phoneNumber"
                  required=""
                  type="tel"
                  value=""
                />
              </div>
            </div>
            <button
              class="sc-fzokOt dTqsia"
              data-testid="submit"
              type="submit"
            >
              mfa.register.phoneNumber
            </button>
          </form>
        </div>
      </div>
      <div
        class="sc-fzoyAV fGuloU"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot mfaCredentials no intro 1`] = `
<div>
  <div
    class="sc-Axmtr jBZtfl"
  >
    <div>
      <div
        class="sc-fzoyAV fGuloU"
      >
        <div
          class="sc-AxhUy ihriO"
        >
          <span />
        </div>
        <div>
          <form
            class="sc-fzqBZW hrtIKw"
            novalidate=""
          >
            <div
              class="sc-fzoLsD mtFrt"
            >
              <label
                class="sc-fzozJi dEjaXT"
                for="phone_number"
              >
                phoneNumber
              </label>
              <div
                class="sc-fzqNJr eQTqfM"
              >
                <input
                  autocomplete="tel"
                  class="sc-fzpans cUAEYx"
                  data-testid="phone_number"
                  id="phone_number"
                  name="phone_number"
                  placeholder="phoneNumber"
                  required=""
                  type="tel"
                  value=""
                />
              </div>
            </div>
            <button
              class="sc-fzokOt dTqsia"
              data-testid="submit"
              type="submit"
            >
              mfa.register.phoneNumber
            </button>
          </form>
        </div>
      </div>
      <div
        class="sc-fzoyAV fGuloU"
      >
        <div>
          <form
            class="sc-fzqBZW hrtIKw"
            novalidate=""
          >
            <button
              class="sc-fzokOt dTqsia"
              data-testid="submit"
              type="submit"
            >
              mfa.remove.email
            </button>
          </form>
        </div>
        <div
          class="sc-AxhUy ihriO"
        >
          <span />
        </div>
        <div>
          <form
            class="sc-fzqBZW hrtIKw"
            novalidate=""
          >
            <button
              class="sc-fzokOt dTqsia"
              data-testid="submit"
              type="submit"
            >
              mfa.remove.phoneNumber
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
